[gd_scene load_steps=10 format=3 uid="uid://qo8ue6ehr142"]

[ext_resource type="Script" path="res://src/scenes/level/level.gd" id="1_55823"]
[ext_resource type="PackedScene" uid="uid://c8xjcapx2p5f1" path="res://src/entities/player/player.tscn" id="1_hqp11"]
[ext_resource type="PackedScene" uid="uid://7l64p8y5j373" path="res://src/entities/barracuda/barracuda.tscn" id="2_pir3q"]
[ext_resource type="PackedScene" uid="uid://bsnba6hta51h0" path="res://src/scenes/common/walls.tscn" id="3_7k3dl"]
[ext_resource type="PackedScene" uid="uid://ch181menffixb" path="res://src/scenes/common/spawns.tscn" id="4_a63qn"]
[ext_resource type="Shader" path="res://res/materials/shake/shake.gdshader" id="5_eu2xm"]
[ext_resource type="FontFile" uid="uid://07jtmouf4f6t" path="res://res/fonts/catfiles/Catfiles.ttf" id="7_2q80b"]
[ext_resource type="PackedScene" uid="uid://d1t3dowrd6qgl" path="res://src/scenes/common/button.tscn" id="8_dc13d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_84k04"]
shader = ExtResource("5_eu2xm")
shader_parameter/percentage = 100.0

[node name="Level" type="Node2D"]
script = ExtResource("1_55823")

[node name="World" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_hqp11")]
position = Vector2(-165, 151)

[node name="Walls" parent="." instance=ExtResource("3_7k3dl")]

[node name="Barracuda" parent="." instance=ExtResource("2_pir3q")]
position = Vector2(900, 900)

[node name="Spawns" parent="." instance=ExtResource("4_a63qn")]

[node name="EnemyLife" type="Node2D" parent="."]
position = Vector2(0, -63)

[node name="Polygon2D" type="Polygon2D" parent="EnemyLife"]
material = SubResource("ShaderMaterial_84k04")
position = Vector2(3, -2)
color = Color(0.792157, 0.117647, 0.235294, 0.501961)
polygon = PackedVector2Array(6, 13, 5, 39, 43.0289, 39.0484, 91.7802, 39.1105, 114, 41, 154.808, 40.9396, 195.241, 40.8798, 239.236, 40.8147, 286.801, 40.7444, 335.56, 40.6722, 378.365, 40.6089, 415.228, 40.5544, 446.147, 40.5087, 498.485, 40.4312, 549.617, 40.3556, 587.675, 40.2993, 615.025, 40.2588, 679.237, 40.1638, 710.163, 40.1181, 758.921, 40.046, 790, 40, 789, 13, 760.098, 13.0481, 724.422, 13.1075, 694.692, 13.1569, 651.879, 13.2282, 607.878, 13.3014, 553.175, 13.3924, 512.742, 13.4597, 469.931, 13.5309, 414.038, 13.6239, 370.041, 13.6971, 324.852, 13.7723, 274.907, 13.8554, 235.663, 13.9207, 188, 14, 167.879, 15.7483, 122, 13, 83.4529, 13, 38.263, 13)

[node name="EndScreen" type="Node2D" parent="."]
position = Vector2(400, 400)

[node name="Survived" type="RichTextLabel" parent="EndScreen"]
modulate = Color(0.286275, 0.964706, 0.698039, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -60.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("7_2q80b")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][wave]You survived[wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Failed" type="RichTextLabel" parent="EndScreen"]
visible = false
modulate = Color(0.678431, 0.14902, 0.133333, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -60.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("7_2q80b")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][wave]You did not survive[wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Title" type="RichTextLabel" parent="EndScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("7_2q80b")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][wave]A day in the life of a [color=ee8f57]fish[/color][wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="BackButton" parent="EndScreen" instance=ExtResource("8_dc13d")]
position = Vector2(0, 317)
text = "go back"

[connection signal="clicked" from="EndScreen/BackButton" to="." method="_on_back_button_clicked"]
